@@ -1,1 +1,0 @@
-#define NPAR 0
